--- a/public/styles.css
+++ b/public/styles.css
@@ -566,12 +566,32 @@ video {
   top: 0px;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.bottom-40 {
+  bottom: 10rem;
+}
+
+.bottom-60 {
+  bottom: 15rem;
+}
+
 .z-0 {
   z-index: 0;
 }
 
 .flex {
   display: flex;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-\[100vh\] {
@@ -622,6 +642,24 @@ video {
   gap: 2rem;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
+.bg-myColorPurple {
+  --tw-bg-opacity: 1;
+  background-color: rgb(98 71 170 / var(--tw-bg-opacity));
+}
+
+.bg-myColorBlue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(124 198 254 / var(--tw-bg-opacity));
+}
+
 .px-40 {
   padding-left: 10rem;
   padding-right: 10rem;
@@ -645,16 +683,6 @@ video {
   line-height: 2rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-8xl {
-  font-size: 6rem;
-  line-height: 1;
-}
-
 .text-9xl {
   font-size: 8rem;
   line-height: 1;
@@ -667,6 +695,24 @@ video {
 .text-myColorGreen {
   --tw-text-opacity: 1;
   color: rgb(45 216 129 / var(--tw-text-opacity));
+}
+
+.text-myColorBlue {
+  --tw-text-opacity: 1;
+  color: rgb(124 198 254 / var(--tw-text-opacity));
+}
+
+.text-myColorPurple {
+  --tw-text-opacity: 1;
+  color: rgb(98 71 170 / var(--tw-text-opacity));
+}
+
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 @font-face {
