--- a/public/styles.css
+++ b/public/styles.css
@@ -558,6 +558,10 @@ video {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
 }
@@ -566,24 +570,12 @@ video {
   top: 0px;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
-.bottom-40 {
-  bottom: 10rem;
-}
-
-.bottom-60 {
-  bottom: 15rem;
-}
-
 .z-0 {
   z-index: 0;
+}
+
+.block {
+  display: block;
 }
 
 .flex {
@@ -602,12 +594,12 @@ video {
   width: 12rem;
 }
 
-.w-\[100vw\] {
-  width: 100vw;
-}
-
 .w-full {
   width: 100%;
+}
+
+.w-screen {
+  width: 100vw;
 }
 
 .flex-row {
@@ -642,22 +634,9 @@ video {
   gap: 2rem;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
-.rounded-2xl {
-  border-radius: 1rem;
-}
-
-.bg-myColorPurple {
+.bg-black {
   --tw-bg-opacity: 1;
-  background-color: rgb(98 71 170 / var(--tw-bg-opacity));
-}
-
-.bg-myColorBlue {
-  --tw-bg-opacity: 1;
-  background-color: rgb(124 198 254 / var(--tw-bg-opacity));
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .px-40 {
@@ -697,14 +676,9 @@ video {
   color: rgb(45 216 129 / var(--tw-text-opacity));
 }
 
-.text-myColorBlue {
+.text-white {
   --tw-text-opacity: 1;
-  color: rgb(124 198 254 / var(--tw-text-opacity));
-}
-
-.text-myColorPurple {
-  --tw-text-opacity: 1;
-  color: rgb(98 71 170 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .transition {
@@ -727,76 +701,12 @@ video {
   src: url('./fonts/hacked-kerx.ttf');
 }
 
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  color-scheme: light dark;
-  color: white;
-  background-color: black;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  /* font-weight: 500; */
-  color: white;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: rgb(126 34 206);
-}
-
-body {
+:root{
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-
-  a:hover {
-    color: rgb(126 34 206);
-  }
-
-  button {
-    background-color: #f9f9f9;
-  }
+  padding: 0;
+  background-color: black;
+  color: white;
+  font-size: 18px;
 }
 
 .hover\:text-myColorGreen:hover {
