--- a/public/styles.css
+++ b/public/styles.css
@@ -574,6 +574,14 @@ video {
   z-index: 0;
 }
 
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
 .block {
   display: block;
 }
@@ -647,6 +655,10 @@ video {
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
 }
 
 .font-bannerFont {
