--- a/public/styles.css
+++ b/public/styles.css
@@ -574,24 +574,12 @@ video {
   z-index: 0;
 }
 
-.mt-32 {
-  margin-top: 8rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.block {
-  display: block;
+.z-10 {
+  z-index: 10;
 }
 
 .flex {
   display: flex;
-}
-
-.hidden {
-  display: none;
 }
 
 .h-\[100vh\] {
@@ -600,10 +588,6 @@ video {
 
 .w-48 {
   width: 12rem;
-}
-
-.w-full {
-  width: 100%;
 }
 
 .w-screen {
@@ -645,6 +629,11 @@ video {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .px-40 {
@@ -691,6 +680,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .transition {
